# rs-tenderdash-abci

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile-alpine  Dockerfile-debian  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: audit.yml  build.yml  docker.yml  github-pages.yml  release.yml  rust-clippy.yml  rust.yml  test.yml
abci/: Cargo.toml  README.md
abci/examples/: echo_socket.rs
abci/src/: application.rs  client.rs  codec.rs  error.rs  lib.rs  server.rs  signatures.rs  tracing_span.rs
abci/src/application/: kvstore.rs
abci/src/application/kvstore/: main.rs
abci/src/server/: codec.rs  generic.rs  main.rs  mod.rs  server.rs  server_builder.rs  tcp.rs  unix.rs  unix_socket_server.rs
abci/tests/: common.rs  echo_app.rs  grpc.rs  kvstore.rs  kvstore_app.rs  socket.rs  tcp.rs  unix.rs
abci/tests/common/: docker.rs  mod.rs
proto/: Cargo.toml  README.md  build.rs
proto-compiler/: Cargo.toml
proto-compiler/src/: constants.rs  functions.rs  lib.rs
proto/src/: .gitignore  error.rs  lib.rs  prelude.rs  protobuf.rs  serializers.rs  signatures.rs  tenderdash.rs  time.rs
proto/src/prost/: tendermint.abci.rs  tendermint.blocksync.rs  tendermint.consensus.rs  tendermint.crypto.rs  tendermint.p2p.rs  tendermint.privval.rs  tendermint.state.rs  tendermint.statesync.rs  tendermint.types.rs  tendermint.version.rs
proto/src/serializers/: bytes.rs  from_str.rs  nullable.rs  optional.rs  part_set_header_total.rs  time_duration.rs  timestamp.rs  txs.rs
proto/tests/: unit.rs
scripts/: release.sh
tools/: Cargo.toml
tools/proto-compiler/: Cargo.toml  README.md
tools/proto-compiler/src/: constants.rs  functions.rs  lib.rs  main.rs
