[package]
name = "tenderdash-abci"
version = "0.13.0-dev.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography::cryptocurrencies", "network-programming"]
keywords = ["abci", "blockchain", "bft", "consensus", "tendermint"]
repository = "https://github.com/dashpay/rs-tenderdash-abci/tree/main/abci"
description = """tenderdash-abci provides a simple framework with which to build\
low-level applications on top of Tenderdash."""

[features]
default = ["server", "docker-tests", "crypto", "tcp", "unix"]
# docker-tests includes integration tests that require docker to be available
docker-tests = ["server"]
server = [
    "tracing-subscriber/fmt",
    "dep:tokio",
    "dep:tokio-util",
    "dep:futures",
]
crypto = ["dep:lhash"]
tcp = ["server"]
unix = ["server"]

[[example]]
name = "echo_socket"
required-features = ["server"]

[dependencies]
tenderdash-proto = { version = "0.13.0-dev.2", path = "../proto" }
bytes = { version = "1.0" }
prost = { version = "0.11" }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = [
    "ansi",
    "env-filter",
] }
thiserror = "1.0.39"
url = { version = "2.3.1" }
semver = { version = "1.0.17" }
lhash = { version = "1.0.1", features = ["sha256"], optional = true }
hex = { version = "0.4" }
tokio-util = { version = "0.7.8", features = [
    "net",
    "codec",
], default-features = false, optional = true }
tokio = { version = "1.28", features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "sync",
    "macros",
], default-features = false, optional = true }
futures = { version = "0.3.28", optional = true }

[dev-dependencies]
anyhow = "1.0.69"
bincode = "2.0.0-rc.2"
blake2 = "0.10.6"
bollard = { version = "0.14.0" }
futures = { version = "0.3.26" }
tokio = { version = "1", features = ["macros", "signal", "time", "io-std"] }
hex = { version = "0.4" }
lazy_static = { version = "1.4" }
