[package]

name = "tenderdash-abci"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography::cryptocurrencies", "network-programming"]
keywords = ["abci", "blockchain", "bft", "consensus", "tendermint", "dash"]
repository = "https://github.com/dashpay/rs-tenderdash-abci/tree/main/abci"
documentation = "https://dashpay.github.io/rs-tenderdash-abci/tenderdash_abci/"

description = """tenderdash-abci provides a simple framework with which to build\
low-level applications on top of Tenderdash."""

rust-version.workspace = true
version.workspace = true

[features]
default = [
    "server",
    "docker-tests",
    "crypto",
    "tcp",
    "unix",
    "grpc",
    "tracing-span",
]
# docker-tests includes integration tests that require docker to be available
docker-tests = ["server"]
server = [
    "tracing-subscriber/fmt",
    "dep:tokio",
    "dep:tokio-util",
    "dep:futures",
]
# std is deprecated, use "grpc" instead
std = ["grpc"]
grpc = ["tenderdash-proto/grpc"]
crypto = ["dep:lhash"]
tcp = ["server"]
unix = ["server"]
tracing-span = ["dep:uuid"]
serde = ["tenderdash-proto/serde", "dep:serde_json"]

[[example]]
name = "echo_socket"
required-features = ["server"]

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "fast-rng"], optional = true }
tenderdash-proto = { path = "../proto", default-features = false }
bytes = { version = "1.6.0" }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", optional = true, default-features = false, features = [
    "ansi",
    "env-filter",
] }
serde_json = { version = "1.0.128", optional = true }
thiserror = { version = "1.0.58" }
url = { version = "2.5.0" }
semver = { version = "1.0.22" }
lhash = { version = "1.1.0", features = ["sha256"], optional = true }
hex = { version = "0.4.3" }
tokio-util = { version = "0.7.12", features = [
    "net",
    "codec",
], default-features = false, optional = true }
tokio = { version = "1.40", features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "sync",
    "macros",
], default-features = false, optional = true }
futures = { version = "0.3.30", optional = true }

[dev-dependencies]
anyhow = { version = "1.0.82" }
bincode = { version = "2.0.0-rc.3" }
blake2 = { version = "0.10.6" }
bollard = { version = "0.17" }
futures = { version = "0.3.30" }
tokio = { version = "1.40", features = ["macros", "signal", "time", "io-std"] }
hex = { version = "0.4.3" }
lazy_static = { version = "1.4.0" }
pollster = { version = "0.3.0" }
