[package]
version = "0.14.0-dev.5"
name = "tenderdash-proto-compiler"
authors = ["Informal Systems <hello@informal.systems>", "Dash Core Group"]
edition = "2021"
description = "Internal tool to download and build tenderdash protobuf definitions; used by proto/build.rs"
publish = false

[lib]

[dependencies]
walkdir = { version = "2.3" }
prost-build = { version = "0.12" }
tempfile = { version = "3.2.0" }
regex = { "version" = "1.7.1" }
# Use of native-tls-vendored should build vendored openssl, which is required for Alpine build
ureq = { "version" = "2.6.2" }
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
fs_extra = { version = "1.3.0" }
