[package]

name = "tenderdash-proto-compiler"
authors = ["Informal Systems <hello@informal.systems>", "Dash Core Group"]
edition = "2021"
description = "Internal tool to download and build tenderdash protobuf definitions; used by proto/build.rs"
publish = false

rust-version.workspace = true
version.workspace = true

[lib]

[dependencies]
walkdir = { version = "2.5.0" }
prost-build = { version = "0.13" }
tempfile = { version = "3.12" }
regex = { "version" = "1.10" }
# Use of native-tls-vendored should build vendored openssl, which is required for Alpine build
ureq = { "version" = "2.10" }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
fs_extra = { version = "1.3.0" }
tonic-build = { version = "0.12", optional = true }
semver = "1.0"


[features]
default = []
# Enable gRPC support; needed by server and client features.
# Conflicts with no_std
grpc = ["dep:tonic-build"]
# Build the gRPC server. Requires tenderdash-proto/grpc feature.
server = ["grpc"]
# Build the gRPC client. Requires tenderdash-proto/grpc feature.
client = ["grpc"]
