[package]
name = "tenderdash-proto"
version = "0.12.0-dev.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dashpay/rs-tenderdash-abci/tree/main/proto"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "tenderdash", "proto"]

description = """
    tenderdash-proto is a the Rust implementation of the Tenderdash proto structs.
    """

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost = { version = "0.11", default-features = false }
bytes = { version = "1.0", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
subtle-encoding = { version = "0.5", default-features = false, features = [
    "hex",
    "base64",
    "alloc",
] }
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.3", default-features = false }
time = { version = "0.3", default-features = false, features = [
    "macros",
    "parsing",
] }
thiserror = { version = "1.0.40" }
chrono = { version = "0.4.24", default-features = false }
derive_more = { version = "0.99.17" }
lhash = { version = "1.0.1", features = ["sha256"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4" }

[build-dependencies]
tenderdash-proto-compiler = { path = "../proto-compiler" }


[features]
default = ["crypto"]
crypto = ["dep:lhash"]
